// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling  Rs.
    10.25
  </h1>
</div>
`;

exports[`Should render expenses summary with more than 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling  Rs.
    1,022.35
  </h1>
</div>
`;
